<resources>
    <string name="app_name">MyMetronome</string>
    <string name="tab_text_1">METRONOME</string>
    <string name="tab_text_2">PLAYER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment2">This is playlist</string>

    <!-- Layout metronome -->
    <string name="button_play">PLAY</string>
    <string name="button_plus">+5</string>
    <string name="button_minus">-5</string>
    <string name="button_bar">4/4</string>
    <string name="button_beats">TAP</string>
    <string name="text_tempo">150</string>
    <string name="start">‎▶</string>
    <string name="stop">■</string>

    <!--Main menu-->

    <string name="action_settings">Settings</string>
    <string name="action_bluetooth">Bluetooth</string>
    <string name="action_save">Save</string>
    <string name="action_songlist">Songlist</string>
    <string name="playlist">Playlists</string>
    <string name="songs">Songs</string>

    <string-array name="Playlist">
        <item>Bouře</item>
        <item>Naděje</item>
        <item>Doufám</item>
        <item>Odcházím</item>
        <item>Tvarohová</item>
        <item>Florka</item>
        <item>Ilu</item>
    </string-array>

    <!--Number of accent circles-->
    <string-array name="accents_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="game">Game</string>
    <string name="trainer">Trainer</string>

</resources>
