<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<data>
    <import type="com.example.metronome.viewModel.MetronomeViewModel" />
    <variable
        name="mViewModel"
        type="com.example.metronome.viewModel.MetronomeViewModel"/>
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PlaylistFragment">

    <Button
        android:id="@+id/button_minus_playlist"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="124dp"
        android:text="@string/button_minus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/playlist_tempo"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/playlist_tempo"
        android:layout_width="70dp"
        android:layout_height="54dp"
        android:layout_marginBottom="124dp"
        android:autofillHints=""
        android:elevation="4dp"
        android:cursorVisible="false"
        android:focusable="false"
        android:ems="10"
        android:inputType="none"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ToggleButton
        android:id="@+id/start_button_playlist"
        android:layout_width="105dp"
        android:layout_height="71dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button_play"
        android:textOff=" ‎▶"
        android:textOn="■"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_next"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_previous"  />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="71dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:text="◁"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/start_button_playlist"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_next"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:text="▷"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/start_button_playlist" />

    <Button
        android:id="@+id/button7"
        android:layout_width="65dp"
        android:layout_height="60dp"
        android:layout_marginBottom="124dp"
        android:text="@string/button_plus"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toEndOf="@+id/start_button_playlist" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>